feat: add news detail #12, fix news by keyword, category #35