@@ -1,11 +1,15 @@
 package com.triplea.triplea.dto.news;
 
 import com.triplea.triplea.dto.bookmark.BookmarkResponse;
+import com.triplea.triplea.dto.category.CategoryResponse;
+import com.triplea.triplea.dto.symbol.SymbolResponse;
+import com.triplea.triplea.dto.user.UserResponse;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -14,17 +18,20 @@ import java.util.List;
  */
 public class NewsResponse {
 
-    @Builder @Getter
+    @Builder
+    @Getter
     @AllArgsConstructor
-    public static class News{
+    public static class News {
         private String search;
         private Long nextPage;
         private List<NewsDTO> news;
     }
+
     @Getter
     public static class NewsDTO {
         private Long newsId;
         private String symbol;
+        private String companyName;
         private String logo;
         private String source;
         private String title;
@@ -33,8 +40,8 @@ public class NewsResponse {
         private String publishedDate;
         private Integer sentiment;
         private BookmarkResponse.BookmarkDTO bookmark;
-        public NewsDTO(ApiResponse.Data data, String logo, BookmarkResponse.BookmarkDTO bookmark)
-        {
+
+        public NewsDTO(ApiResponse.Data data, String logo, BookmarkResponse.BookmarkDTO bookmark) {
             this.newsId = data.getId();
             this.symbol = data.getSymbol();
             this.logo = logo;
@@ -46,10 +53,11 @@ public class NewsResponse {
             this.sentiment = data.getSentiment();
             this.bookmark = bookmark;
         }
-
-        public NewsDTO(ApiResponse.Details details, String logo, BookmarkResponse.BookmarkDTO bookmark) {
+        @Builder
+        public NewsDTO(ApiResponse.Details details, String companyName, String logo, BookmarkResponse.BookmarkDTO bookmark) {
             this.newsId = details.getId();
             this.symbol = details.getSymbol();
+            this.companyName = companyName;
             this.logo = logo;
             this.source = details.getSource();
             this.title = details.getTitle();
@@ -62,83 +70,86 @@ public class NewsResponse {
     }
 
     @Getter
-    public static class Details{
-        private User user;
+    public static class Details {
+        private UserResponse.News user;
         private Long newsId;
-        private Symbol symbol;
+        private SymbolResponse.News symbol;
         private String source;
-        private String title;
-        private String description;
-        private String summary;
         private String thumbnail;
         private String url;
         private String publishedDate;
-        private String content;
-        private Category category;
-        private List<String> keyword;
+        private CategoryResponse category;
+        private List<String> keyword = new ArrayList<>();
+        private Article eng;
+        private Article kor;
         private BookmarkResponse.BookmarkDTO bookmark;
         private Integer sentiment;
 
         @Builder
-        public Details(NewsResponse.Details.User user, ApiResponse.Details details, NewsResponse.Details.Symbol symbol, String description, Category category, BookmarkResponse.BookmarkDTO bookmark) {
+        public Details(UserResponse.News user, SymbolResponse.News symbol, ApiResponse.Details details, CategoryResponse category, Article eng, Article kor, BookmarkResponse.BookmarkDTO bookmark) {
             this.user = user;
             this.newsId = details.getId();
             this.symbol = symbol;
             this.source = details.getSource();
-            this.title = details.getTitle();
-            this.description = description;
-            this.summary = details.getSummary();
             this.thumbnail = details.getThumbnail();
             this.url = details.getUrl();
             this.publishedDate = details.getPublishedDate();
-            this.content = details.getContent();
             this.category = category;
-            if(details.getKeyword1().equals("null") && details.getKeyword2().equals("null") && details.getKeyword3().equals("null")) this.keyword = Collections.emptyList();
-            else this.keyword = List.of(details.getKeyword1(), details.getKeyword2(), details.getKeyword3());
+            if (details.getKeyword1() == null && details.getKeyword2() == null && details.getKeyword3() == null)
+                this.keyword = Collections.emptyList();
+            else {
+                this.keyword.add(details.getKeyword1());
+                this.keyword.add(details.getKeyword2());
+                this.keyword.add(details.getKeyword3());
+            }
+            this.eng = eng;
+            this.kor = kor;
             this.bookmark = bookmark;
             this.sentiment = details.getSentiment();
         }
 
-        @Getter @Builder
-        @AllArgsConstructor
-        public static class User{
-            private com.triplea.triplea.model.user.User.Membership membership;
-            private Integer leftBenefitCount;
+        @Getter
+        public static class Article{
+            private String title;
+            private String description;
+            private String summary;
+            private String content;
+
+            public Article(String title) {
+                this.title = title;
+            }
+            public Article(ApiResponse.Details details){
+                this.title = details.getTitle();
+                this.description = details.getDescription();
+                this.summary = details.getSummary();
+                this.content = details.getContent();
+            }
+            public Article(NewsResponse.TranslateOut translate){
+                this.title = translate.getTitle();
+                this.description = translate.getDescription();
+                this.summary = translate.getSummary();
+                this.content = translate.getContent();
+            }
         }
+    }
+
+    @Getter
+    @Builder
+    @NoArgsConstructor
+    @AllArgsConstructor
+    public static class TranslateOut {
+        private String title;
+        private String description;
+        private String summary;
+        private String content;
 
         @Getter
-        public static class Symbol{
-            private String name;
-            private String companyName;
-            private String sector;
-            private String logo;
-            private String marketType;
-            private Price price;
-
-            @Builder
-            public Symbol(ApiResponse.MoyaSymbol symbol, String logo, Price price) {
-                this.name = symbol.getSymbol();
-                this.companyName = symbol.getCompanyName();
-                this.sector = symbol.getSector();
-                this.logo = logo;
-                this.marketType = symbol.getMarketType();
-                this.price = price;
-            }
-
-            @Getter @Builder
-            @NoArgsConstructor
-            @AllArgsConstructor
-            public static class Price{
-                private ApiResponse.Tiingo today;
-                private ApiResponse.Tiingo yesterday;
-            }
-        }
-
-        @Getter @Builder
+        @Builder
+        @NoArgsConstructor
         @AllArgsConstructor
-        public static class Category{
-            private Long categoryId;
-            private String category;
+        public static class Article{
+            NewsResponse.Details.Article articleEng;
+            NewsResponse.Details.Article articleKor;
         }
     }
 }
